# Simple_warehouse

SzymanekPaulina-etap3/: CMakeLists.txt  Magazyn.cpp  Magazyn.h  Paleciak.cpp  Paleciak.h  Produkt.cpp  Produkt.h  ProduktT.h  main.cpp  stdin.txt  temat1.txt
